KULRICE-8445 - moving rice modules to rice-middleware